<resources>
    <string name="app_name">Great Kitchens</string>
    <string name="mobile_number">Enter 10 digit mobile number</string>
    <string name="password">Enter your password</string>
    <string name="login">Login</string>
    <string name="enter_name">Enter your name</string>
    <string name="address">Enter your delivery address</string>
    <string name="choose_password">Enter password(Min.4 characters)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Register</string>
    <string name="home">Home</string>
    <string name="offers">New Offers</string>
    <string name="my_profile">My Profile</string>
    <string name="about_us">About Me</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Log out</string>
    <string name="cart">Cart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="filter">Filter</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="profile_details">Your Profile Details are listed below:</string>
    <string name="go_to_cart">Proceed to Cart</string>
    <string name="action_search">Search</string>
    <string name="search_restaurants">Search Restaurants</string>
    <string name="favorites">Favorite Restaurants</string>
    <string name="channel_name">Android Training</string>
    <string name="channel_description">This notification confirms that the order is placed</string>
    <string name="dummy_phone">+91-1234567890</string>
    <string name="empty_cart">Your cart is currently empty</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>
    <string name="register_yourself">
        <u>Don\'t have an account? Sign up now</u>
    </string>
    <string name="forgot_password">
        <u>Forgot Password?</u>
    </string>
    <string name="enter_mobile_forgot_password">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_otp">Enter the received OTP below</string>
    <string name="otp">OTP (4 characters)</string>
    <string name="new_password">Enter new password (Min. 4 characters)</string>
    <string name="save_changes">Save changes</string>
    <string name="order_placed">Your order has been successfully placed!</string>
    <string name="order_history_static_text">Your previous orders are listed below :</string>
    <string name="date">20/12/2018</string>
    <string name="mail">Enter your mail id</string>
    <string name="great_kitchens">Great Kitchens</string>
    <string name="question1">Q. What is the best restaurant?</string>
    <string name="answer1">A. \'Dine in Kitchens\' is the best restaurant also \'Forks and Knives Grill\' and \'The Bowl Hotel\' are very good ones.</string>
    <string name="question2">Q. Tell me the best dish to try out?</string>
    <string name="answer2">A. \'Chicken Popcorn\', \'Chicken Burger\' and \'Salmon\' are the most delicious dishes. Adding coke and fries would be finger licking.</string>
    <string name="question3">Q. I want the most budget friendly restaurant. Which one shall I choose?</string>
    <string name="answer3">A. Our app provides you huge discounts making it budget friendly for you. You can also search restaurants like, \'Dishes and Plates\', \'Licking Good\' and \'Happy Meal\' for more budget friendly orders.</string>
    <string name="mail_id">Mail id</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="place_your_order">Place your order</string>
    <string name="user_mobile_number">1234567890</string>
    <string name="my_token">1f0231dbd129ff</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="dish_name">Chicken Tikka</string>

    <array name="filters">
        <item>Cost(Low to High)</item>
        <item>Cost(High to Low)</item>
        <item>Rating</item>
    </array>

</resources>
