<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo" />

    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/text_boundary_background"
        android:drawableStart="@drawable/ic_action_phone"
        android:drawablePadding="3dp"
        android:hint="@string/mobile_number"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="10dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/text_boundary_background"
        android:drawableStart="@drawable/ic_action_password"
        android:drawablePadding="3dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="@color/buttonTextColor"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:padding="5dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:textSize="15sp"
            android:padding="5dp"
            android:text="@string/register_yourself"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </RelativeLayout>
</LinearLayout>