<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#ffffff">
        <TextView
            android:id="@+id/txtQ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#f44336"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtA1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtQ1"
            android:text="@string/answer1"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_margin="10dp"
            android:padding="5dp"/>
        <View
            android:id="@+id/Line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:elevation="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#000000"
            android:layout_below="@id/txtA1"/>
        <TextView
            android:id="@+id/txtQ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Line1"
            android:text="@string/question2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#f44336"
            android:layout_margin="10dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtA2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtQ2"
            android:text="@string/answer2"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_margin="10dp"
            android:padding="5dp"/>
        <View
            android:id="@+id/Line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:elevation="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#000000"
            android:layout_below="@id/txtA2"/>
        <TextView
            android:id="@+id/txtQ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Line2"
            android:text="@string/question3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#f44336"
            android:layout_margin="10dp"
            android:padding="5dp"/>
        <TextView
            android:id="@+id/txtA3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtQ3"
            android:text="@string/answer3"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_margin="10dp"
            android:padding="5dp"/>
        <View
            android:id="@+id/Line3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:elevation="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#000000"
            android:layout_below="@id/txtA3" />
</RelativeLayout>