<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/pageBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlRegister">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:background="@drawable/text_boundary_background"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:hint="@string/enter_name"
            android:drawableLeft="@drawable/ic_action_person"
            android:drawablePadding="3dp"
            android:textColor="#000000"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:background="@drawable/text_boundary_background"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawablePadding="3dp"
            android:maxLines="1"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_boundary_background"
            android:layout_below="@+id/etEmail"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:maxLength="10"
            android:drawableStart="@drawable/ic_action_phone"
            android:drawablePadding="3dp"
            android:maxLines="1"
            android:hint="@string/mobile_number"
            android:inputType="phone"
            android:singleLine="true"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_boundary_background"
            android:layout_below="@+id/etPhoneNumber"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:gravity="top"
            android:drawableLeft="@drawable/ic_action_address"
            android:drawablePadding="3dp"
            android:hint="@string/address"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:background="@drawable/text_boundary_background"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAddress"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/choose_password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_action_password"
            android:drawablePadding="3dp"
            android:singleLine="true"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_boundary_background"
            android:layout_below="@+id/etPassword"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_action_password"
            android:drawablePadding="3dp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmPassword"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:text="@string/registration"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/progLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>