<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pageBackground"
        android:id="@+id/rlOTP">
        <EditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_boundary_background"
            android:textSize="18sp"
            android:layout_marginTop="80dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="4"
            android:textColor="#000000"
            android:hint="@string/otp"/>
        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etOTP"
            android:background="@drawable/text_boundary_background"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#000000"
            android:hint="@string/new_password"/>

        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etNewPassword"
            android:background="@drawable/text_boundary_background"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="#000000"
            android:hint="@string/confirm_password"/>
        <Button
            android:id="@+id/btnSubmitOTP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etConfirmNewPassword"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:text="@string/save_changes"
            android:layout_centerInParent="true"
            android:shadowRadius="2"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"/>
            <!--android:visibility="gone" /-->
    </RelativeLayout>
</RelativeLayout>