<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="4dp">

        <ImageView
            android:id="@+id/imgUserImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/profile_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY" />

        <LinearLayout
            android:id="@+id/llProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgUserImage"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="4dp">


            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:textStyle="italic"
                android:text="@string/name"
                android:background="@drawable/text_boundary_background"
                android:textAlignment="center"
                android:textColor="#000000"/>


            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:text="@string/dummy_phone"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:textStyle="italic"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_boundary_background"
                android:text="@string/mail_id"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:textStyle="italic"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/text_boundary_background"
                android:textSize="20sp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:padding="10dp"
                android:textStyle="italic"
                android:text="@string/delivery_address"
                android:textAlignment="center"
                android:textColor="#000000"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>