<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlForgotPass"
    tools:context=".activity.ForgotPasswordActivity"
    android:background="@color/pageBackground">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlContentMain">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot Password"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="5dp"/>


        <ImageView
            android:id="@+id/imgAppLogo"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/app_logo"/>

        <EditText
            android:id="@+id/etForgotMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppLogo"
            android:background="@drawable/text_boundary_background"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:maxLength="10"
            android:maxLines="1"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:hint="@string/mobile_number"/>

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotMobile"
            android:background="@drawable/text_boundary_background"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:hint="@string/mail"/>

        <Button
            android:id="@+id/btnForgotNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etForgotEmail"
            android:layout_margin="50dp"
            android:padding="10dp"
            android:background="@drawable/button_background"
            android:textColor="@color/buttonTextColor"
            android:text="@string/next"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:id="@+id/progressLayout">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>